Fixed align icons for links

--- a/resources/sass/core/buttons.scss
+++ b/resources/sass/core/buttons.scss
@@ -13,7 +13,7 @@
 
 .btn-link {
     color: $text-color;
-    align-items: baseline;
+    align-items: center;
 
     &.active {
         box-shadow: none;
